Implemented the redesigned version of the calculator
